--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -3,12 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:camerakit="http://schemas.android.com/apk/res-auto"
     tools:context=".CameraFragment">
 
     <com.wonderkiln.camerakit.CameraView
         android:id="@+id/camera"
+        android:paddingTop="55dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        camerakit:ckJpegQuality="100"
+        camerakit:ckFlash="auto"
+        camerakit:ckMethod="still"
         android:adjustViewBounds="true" />
 
     <Button
