--- a/app/src/main/res/layout/item_student_detail.xml
+++ b/app/src/main/res/layout/item_student_detail.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/student_name"
@@ -11,14 +10,21 @@
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
 
+    <TextView
+        android:id="@+id/student_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:layout_toEndOf="@id/student_name"
+        android:textAppearance="?attr/textAppearanceListItem" />
+
     <ImageButton
-        android:id="@+id/parent_list_item_expand_arrow"
+        android:id="@+id/drop_down_button"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        style="?android:attr/borderlessButtonStyle"
         android:background="@null"
         android:src="@drawable/ic_drop_down" />
 
