--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#1565C0</color>
     <color name="colorPrimaryDark">#0D47A1</color>
-    <color name="colorAccent">#FFEB3B</color>
+    <color name="colorAccent">#afb42b</color>
     <color name="refresh_progress_1">@color/colorPrimaryDark</color>
     <color name="refresh_progress_2">@color/colorAccent</color>
     <color name="refresh_progress_3">@color/colorPrimary</color>
