--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
                     android:layout_weight=".3"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:src="@android:drawable/ic_menu_camera" />
+                    android:src="@drawable/ic_menu_camera" />
 
             </LinearLayout>
 
