--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="colorPrimary">#1565C0</color>
     <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#afb42b</color>
+    <color name="cameraResultColor">#ef9a9a</color>
     <color name="refresh_progress_1">@color/colorPrimaryDark</color>
     <color name="refresh_progress_2">@color/colorAccent</color>
     <color name="refresh_progress_3">@color/colorPrimary</color>
+    <color name="cameraOkay">#66bb6a</color>
+    <color name="cameraError">#ef5350</color>
 </resources>
