--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -6,7 +6,8 @@
     tools:context=".MainActivity">
 
     <TextureView
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="75dp"
+        android:visibility="invisible"
         android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
