--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -7,7 +7,6 @@
 
     <TextureView
         android:layout_marginTop="75dp"
-        android:visibility="invisible"
         android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -56,7 +55,8 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:text="Plate Number: B79 6992"
+                android:id="@+id/textview_plate_number_camera_result"
+                android:text="Plate #: B79 6992"
                 android:textSize="14dp"
                 android:textStyle="bold"
                 android:layout_alignParentStart="true"
@@ -65,7 +65,8 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:text="Student Name: Leo Forney"
+                android:id="@+id/textview_student_name_camera_result"
+                android:text="Student: Leo Forney"
                 android:textSize="14dp"
                 android:textStyle="bold"
                 android:layout_alignParentEnd="true"
