--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -56,27 +56,32 @@
 
             <TextView
                 android:id="@+id/textview_plate_number_camera_result"
-                android:text="Plate #: B79 6992"
-                android:textSize="14dp"
-                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="Plate #: "
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textview_student_name_camera_result"
-                android:text="Student: Leo Forney"
-                android:textSize="14dp"
-                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="Student:"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
-        <include layout="@layout/view_cardview_results" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pass_failed_result_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/camera_student_failed_result" />
 
     </LinearLayout>
 
