--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextureView
+    <SurfaceView
         android:layout_marginTop="75dp"
         android:id="@+id/textureView"
         android:layout_width="wrap_content"
