Reverted back to EZCam and fully working USB Camera (without recyclerview or sound)

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -3,19 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_below="@id/toolbar"
     tools:context=".MainActivity">
 
-    <SurfaceView
-        android:layout_marginTop="55dp"
-        android:id="@+id/surfaceView"
+    <TextureView
+        android:layout_marginTop="75dp"
+        android:id="@+id/textureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_marginTop="55dp"
         android:orientation="vertical"
-        android:background="@color/GRAY"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
