--- a/app/src/main/res/layout/activity_usbcamera.xml
+++ b/app/src/main/res/layout/activity_usbcamera.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff000000"
     tools:context="tk.leoforney.passchecker.USBCameraActivity"
     tools:ignore="MergeRootFrame"
     android:keepScreenOn="true">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/toolbar">
 
         <com.serenegiant.usb.widget.UVCCameraTextureView
             android:id="@+id/camera_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
     </FrameLayout>
 
     <LinearLayout
@@ -74,16 +73,5 @@
             android:layout_height="match_parent"
             android:layout_weight="2" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/return_to_main"
-        android:layout_alignStart="@+id/llayout_brightness"
-        android:text="Return back"
-        android:layout_alignParentTop="true"
-        android:layout_width="wrap_content"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="27dp"
-        android:layout_height="wrap_content" />
 
 </RelativeLayout>
