--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="refresh_progress_3">@color/colorPrimary</color>
     <color name="cameraOkay">#66bb6a</color>
     <color name="cameraError">#ef5350</color>
+    <color name="panelGreen">#94af76</color>
 </resources>
